Adjusted corr. author email and declaration of interests

--- a/Article.tex
+++ b/Article.tex
@@ -50,8 +50,8 @@
 \end{keywords}
 
 \begin{corrauthor}
-    % meriem.elkaroui\at ed.ac.uk
-    meriem.el\_karoui\at\ ens-paris-saclay.fr
+    meriem.elkaroui\at ed.ac.uk
+    % meriem.el\_karoui\at\ens-paris-saclay.fr
 \end{corrauthor}
 
 \input{Introduction}
@@ -75,7 +75,7 @@
 \end{contributions}
 
 \begin{interests}
-    The authors declare no competing financial interests.
+    The authors declare no competing interests.
 \end{interests}
 
 \nolinenumbers%
@@ -84,7 +84,9 @@
 \bibliography{Bibliography}
 
 \onecolumn
-\newpage
+\clearpage
+\pagenumbering{arabic}
+\setcounter{page}{1}
 
 \begin{center}
     \huge
