Add log scale to fits

--- a/Notebooks/Ciprofloxacin/RecB_spots.ipynb
+++ b/Notebooks/Ciprofloxacin/RecB_spots.ipynb
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +744,7 @@
     "    .facet(col='Group')\n",
     "    .add(so.Bars(), so.Agg(), y='proportion', legend=False)\n",
     "    .add(so.Line(color='k'), so.Agg(), y='Fit', legend=False)\n",
-    "    .scale(color=so.Nominal('flare'))\n",
+    "    .scale(color=so.Nominal('flare'), y='log')\n",
     "    .limit(x=(0, 50), y=(None, None))\n",
     "    .label(x=\"Spot lifetime (sec)\", y=\"Probability\", color='Ciprofloxacin', title='Ciprofloxacin {}'.format)\n",
     "    .save(loc='/media/daniel/HDD Daniel/DanielThedie/Python/RecB_article/SI_Figures/Monoexp_fits_cipro_A.svg', format='svg', bbox_inches='tight')\n",
